--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -7,10 +7,11 @@ jobs:
         runs-on: ubuntu-latest 
         strategy:
             matrix:
-              python-version: ["pypy3.10", "3.9", "3.10", "3.11", "3.12", "3.13"]
+              python-version: ["pypy3.10"] # "3.9", "3.10", "3.11", "3.12", "3.13"
 
         steps:
-            - uses: actions/checkout@v4
+            - name: checkout repo
+              uses: actions/checkout@v4
             - name: set up python ${{ matrix.python-version }}
               uses: actions/setup-python@v5
               with:
@@ -22,4 +23,3 @@ jobs:
             - name: Test with pytest
               run: |
                   pytest test_pipeline.py
-            - run: echo "The test passed successfully! :)"
