--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -1,26 +1,50 @@
 name: pipeline and testing
 
-on: push
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-    build-and-test:
-        runs-on: ubuntu-latest 
-        strategy:
-            matrix:
-              python-version: ["3.8"] # "3.9", "3.10", "3.11", "3.12", "3.13"
+  build-and-test:
+      runs-on: ubuntu-latest 
+      strategy:
+          matrix:
+            python-version: ["3.8"] # "3.9", "3.10", "3.11", "3.12", "3.13"
 
-        steps:
-            - name: checkout repo
-              uses: actions/checkout@v4
-            - name: set up python ${{ matrix.python-version }}
-              uses: actions/setup-python@v5
-              with:
-                  python-version: ${{ matrix.python-version }}
-                  cache: 'pip' # cache the pip to speed up the process
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
-            - name: Test with pytest
-              run: |
-                  pytest test_pipeline.py
+      steps:
+          - name: checkout repo
+            uses: actions/checkout@v4
+          - name: set up python ${{ matrix.python-version }}
+            uses: actions/setup-python@v5
+            with:
+                python-version: ${{ matrix.python-version }}
+                cache: 'pip' # cache the pip to speed up the process
+          - name: Install dependencies
+            run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+          - name: Test with pytest
+            run: |
+                pytest test_pipeline.py
+
+  deploy:
+    needs: build-and-test  # Deploy only after the tests pass
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'  # Deploy only on the main branch
+
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: set up python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+            python-version: ${{ matrix.python-version }}
+            cache: 'pip' # cache the pip to speed up the process
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+      - name: run the application
+        run: |
+            python main.py
