correct path of main script

--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -47,4 +47,4 @@ jobs:
             pip install -r requirements.txt
       - name: run the application
         run: |
-            python main.py
+            python ./pipeline/main.py
