--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install -r requirements.txt
+            pip install --upgrade pandas pandasai
       - name: run the application
         run: |
             python ./pipeline/main.py
