--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -20,9 +20,12 @@ jobs:
             with:
                 python-version: ${{ matrix.python-version }}
                 cache: 'pip' # cache the pip to speed up the process
+          - name: Install build tools
+            run: |
+              python -m pip install --upgrade pip setuptools wheel
           - name: Install dependencies
             run: |
-                python -m pip install --upgrade pip
+                python -m pip install --upgrade pip setuptools wheel
                 pip install -r requirements.txt
           - name: Test with pytest
             run: |
@@ -43,7 +46,6 @@ jobs:
             cache: 'pip' # cache the pip to speed up the process
       - name: Install dependencies
         run: |
-            python -m pip install --upgrade pip
             pip install -r requirements.txt
       - name: run the application
         run: |
