--- a/.github/workflows/pipeline CICD.yml
+++ b/.github/workflows/pipeline CICD.yml
@@ -7,29 +7,25 @@ on:
 
 jobs:
   build-and-test:
-      runs-on: ubuntu-latest 
-      strategy:
-          matrix:
-            python-version: ["3.8"] # "3.9", "3.10", "3.11", "3.12", "3.13"
+    runs-on: ubuntu-latest 
 
-      steps:
-          - name: checkout repo
-            uses: actions/checkout@v4
-          - name: set up python ${{ matrix.python-version }}
-            uses: actions/setup-python@v5
-            with:
-                python-version: ${{ matrix.python-version }}
-                cache: 'pip' # cache the pip to speed up the process
-          - name: Install build tools
-            run: |
-              python -m pip install --upgrade pip setuptools wheel
-          - name: Install dependencies
-            run: |
-                python -m pip install --upgrade pip setuptools wheel
-                pip install -r requirements.txt
-          - name: Test with pytest
-            run: |
-                pytest test_pipeline.py
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: set up python 3.8
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
+          cache: 'pip'  # cache the pip to speed up the process
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pytest test_pipeline.py
 
   deploy:
     needs: build-and-test  # Deploy only after the tests pass
@@ -39,14 +35,14 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
-      - name: set up python ${{ matrix.python-version }}
+      - name: set up python 3.8
         uses: actions/setup-python@v5
         with:
-            python-version: ${{ matrix.python-version }}
-            cache: 'pip' # cache the pip to speed up the process
+          python-version: '3.8'
+          cache: 'pip'  # cache the pip to speed up the process
       - name: Install dependencies
         run: |
-            pip install -r requirements.txt
+          pip install -r requirements.txt
       - name: run the application
         run: |
-            python ./pipeline/main.py
+          python ./pipeline/main.py
